# cpp-ray-tracer-challenge

./: .gitignore  CMakeLists.txt
src/: Canvas.cpp  Canvas.h  Color.cpp  Color.h  Computations.cpp  Computations.h  Intersection.cpp  Intersection.h  Intersections.cpp  Intersections.h  Interval.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Transformations.cpp  Transformations.h  Tuple.cpp  Tuple.h  World.cpp  World.h  main.cpp
tests/: test.h  test_canvas.cpp  test_colors.cpp  test_intersections.cpp  test_lights.cpp  test_materials.cpp  test_matrix.cpp  test_ray.cpp  test_spheres.cpp  test_transformations.cpp  test_tuples.cpp  test_world.cpp
